--- a/src/views/shop-details.hbs
+++ b/src/views/shop-details.hbs
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Shop</h1>
-    
+    <p>Name: {{shop.name}}</p>
+    <p>Rating: {{shop.rating}}</p>
+    <a href="http://localhost:3001/shop-list">See all shops</a>
 </body>
 </html>
